tests/baselines/reference/scopingInCatchBlocks.errors.txt
scopingInCatchBlocks.ts(9,9): error TS2304: Cannot find name 'ex1'.


==== scopingInCatchBlocks.ts (1 errors) ====
    try { } catch(ex1) { 
    	throw ex1;
    }
    
    try { } catch(ex1) { } // should not error
    
    try { } catch(ex1) { } // should not error
    
    var x = ex1; // should error
            ~~~
!!! error TS2304: Cannot find name 'ex1'.
    